Completed the second assignment

--- a/app/assets/javascripts/spa-demo/config/config.module.js.erb
+++ b/app/assets/javascripts/spa-demo/config/config.module.js.erb
@@ -14,6 +14,7 @@
       things_page_html: "<%= asset_path('spa-demo/pages/things_page.html') %>",
       museums_page_html: "<%= asset_path('spa-demo/pages/museums_page.html') %>",
       subjects_page_html: "<%= asset_path('spa-demo/pages/subjects_page.html') %>",
+      places_page_html:   "<%= asset_path('spa-demo/pages/places_page.html') %>",
 
       navbar_html: "<%= asset_path('spa-demo/layout/navbar/navbar.html') %>",
       tabs_html: "<%= asset_path('spa-demo/layout/tabs/tabs.html') %>",
