--- a/app/assets/javascripts/spa-demo/layout/navbar/navbar.html
+++ b/app/assets/javascripts/spa-demo/layout/navbar/navbar.html
@@ -28,6 +28,8 @@
                 <a ui-sref="museums({id:null})">Museums</a></li>
             <li ui-sref-active="active">
                 <a ui-sref="home">Subjects</a></li>
+            <li ui-sref-active="active">
+                <a ui-sref="place">Museum Subjects</a></li>
           </ul>
           
         </li>
